--- a/LivingDesign/View/Delete.storyboard
+++ b/LivingDesign/View/Delete.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DPn-2P-vHz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DPn-2P-vHz">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -43,11 +43,11 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HLM-zI-5wE">
-                                                    <rect key="frame" x="37" y="128" width="57" height="35"/>
+                                                    <rect key="frame" x="48" y="118" width="35.5" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="35" id="04p-OF-Ise"/>
+                                                        <constraint firstAttribute="height" constant="20" id="04p-OF-Ise"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -87,7 +87,7 @@
                                                 <constraint firstItem="mCD-3g-Bex" firstAttribute="top" secondItem="ekx-Nh-tXn" secondAttribute="top" id="MwF-sH-lpk"/>
                                                 <constraint firstItem="HLM-zI-5wE" firstAttribute="centerX" secondItem="ekx-Nh-tXn" secondAttribute="centerX" id="YYg-AJ-3ap"/>
                                                 <constraint firstItem="HV0-Ji-wFU" firstAttribute="centerX" secondItem="ekx-Nh-tXn" secondAttribute="centerX" id="gmZ-Lf-MSZ"/>
-                                                <constraint firstAttribute="bottom" secondItem="HLM-zI-5wE" secondAttribute="bottom" constant="1" id="hi7-eh-GeO"/>
+                                                <constraint firstItem="HLM-zI-5wE" firstAttribute="top" secondItem="HV0-Ji-wFU" secondAttribute="bottom" constant="10" id="mKQ-tH-Qdm"/>
                                                 <constraint firstItem="mCD-3g-Bex" firstAttribute="leading" secondItem="ekx-Nh-tXn" secondAttribute="leading" id="oz6-DX-ODg"/>
                                             </constraints>
                                         </collectionViewCellContentView>
@@ -110,36 +110,57 @@
                                     <constraint firstAttribute="height" constant="84" id="e6t-uX-CAD"/>
                                 </constraints>
                             </view>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bbt-QO-iaL">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PCD-zj-Q24">
                                 <rect key="frame" x="0.0" y="44" width="414" height="45"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="削除画面" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pzc-MX-bCE">
+                                        <rect key="frame" x="170" y="11.5" width="74" height="22"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ln-9W-SjL">
+                                        <rect key="frame" x="354" y="7.5" width="40" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="GPs-hz-LvI"/>
+                                        </constraints>
+                                        <state key="normal" title="完了"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1jt-uS-m96">
+                                        <rect key="frame" x="20" y="7.5" width="80" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="Hzh-kU-Ddi"/>
+                                        </constraints>
+                                        <state key="normal" title="取り消し"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.97256201509999995" green="0.972525537" blue="0.9725503325" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="rbH-eg-8sJ"/>
+                                    <constraint firstItem="Pzc-MX-bCE" firstAttribute="centerY" secondItem="PCD-zj-Q24" secondAttribute="centerY" id="0ve-cX-HL1"/>
+                                    <constraint firstAttribute="trailing" secondItem="1Ln-9W-SjL" secondAttribute="trailing" constant="20" id="0vz-wE-IsD"/>
+                                    <constraint firstItem="1jt-uS-m96" firstAttribute="centerY" secondItem="PCD-zj-Q24" secondAttribute="centerY" id="9VP-KM-75a"/>
+                                    <constraint firstItem="1Ln-9W-SjL" firstAttribute="centerY" secondItem="PCD-zj-Q24" secondAttribute="centerY" id="CRF-ue-aSR"/>
+                                    <constraint firstItem="Pzc-MX-bCE" firstAttribute="centerX" secondItem="PCD-zj-Q24" secondAttribute="centerX" id="F5f-uW-SKd"/>
+                                    <constraint firstAttribute="height" constant="45" id="bmy-ob-c5w"/>
+                                    <constraint firstItem="1jt-uS-m96" firstAttribute="leading" secondItem="PCD-zj-Q24" secondAttribute="leading" constant="20" id="yXa-Xg-JjP"/>
                                 </constraints>
-                                <items>
-                                    <navigationItem title="削除画面" id="X79-jW-GBC">
-                                        <rightBarButtonItems>
-                                            <barButtonItem title="完了" id="DYM-sH-dDj"/>
-                                            <barButtonItem title="取り消し" id="ymH-0v-IT6"/>
-                                        </rightBarButtonItems>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="kyd-ZQ-jpD" firstAttribute="trailing" secondItem="dKb-jZ-Zuh" secondAttribute="trailing" constant="20" id="4Fr-We-BiL"/>
                             <constraint firstItem="4Uy-vl-2F2" firstAttribute="top" secondItem="sm0-hu-GMR" secondAttribute="bottom" constant="10" id="DgZ-wS-ZtF"/>
                             <constraint firstAttribute="bottom" secondItem="4Uy-vl-2F2" secondAttribute="bottom" id="G7p-Dm-Fki"/>
-                            <constraint firstItem="bbt-QO-iaL" firstAttribute="trailing" secondItem="kyd-ZQ-jpD" secondAttribute="trailing" id="HMs-qR-0j7"/>
                             <constraint firstItem="kyd-ZQ-jpD" firstAttribute="trailing" secondItem="sm0-hu-GMR" secondAttribute="trailing" constant="20" id="NKC-ib-cEE"/>
                             <constraint firstItem="4Uy-vl-2F2" firstAttribute="leading" secondItem="kyd-ZQ-jpD" secondAttribute="leading" id="Orz-l7-FVc"/>
+                            <constraint firstItem="PCD-zj-Q24" firstAttribute="leading" secondItem="kyd-ZQ-jpD" secondAttribute="leading" id="R2D-Q3-hXs"/>
                             <constraint firstItem="dKb-jZ-Zuh" firstAttribute="leading" secondItem="kyd-ZQ-jpD" secondAttribute="leading" constant="20" id="SLU-el-Ghf"/>
+                            <constraint firstItem="kyd-ZQ-jpD" firstAttribute="trailing" secondItem="PCD-zj-Q24" secondAttribute="trailing" id="SoQ-w5-m3x"/>
                             <constraint firstItem="sm0-hu-GMR" firstAttribute="leading" secondItem="kyd-ZQ-jpD" secondAttribute="leading" constant="20" id="beM-cx-ELU"/>
                             <constraint firstItem="sm0-hu-GMR" firstAttribute="top" secondItem="dKb-jZ-Zuh" secondAttribute="bottom" constant="25" id="eqB-UL-7S6"/>
                             <constraint firstItem="kyd-ZQ-jpD" firstAttribute="trailing" secondItem="4Uy-vl-2F2" secondAttribute="trailing" id="hov-OP-Ui0"/>
-                            <constraint firstItem="bbt-QO-iaL" firstAttribute="leading" secondItem="kyd-ZQ-jpD" secondAttribute="leading" id="kLx-cd-dKz"/>
                             <constraint firstItem="dKb-jZ-Zuh" firstAttribute="top" secondItem="kyd-ZQ-jpD" secondAttribute="top" constant="55" id="uTG-Ys-lcs"/>
-                            <constraint firstItem="bbt-QO-iaL" firstAttribute="top" secondItem="kyd-ZQ-jpD" secondAttribute="top" id="zpm-S9-HUd"/>
+                            <constraint firstItem="PCD-zj-Q24" firstAttribute="top" secondItem="kyd-ZQ-jpD" secondAttribute="top" id="x9W-Ne-iv2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kyd-ZQ-jpD"/>
                     </view>
