--- a/LivingDesign/View/Delete.storyboard
+++ b/LivingDesign/View/Delete.storyboard
@@ -126,6 +126,9 @@
                                             <constraint firstAttribute="width" constant="40" id="GPs-hz-LvI"/>
                                         </constraints>
                                         <state key="normal" title="完了"/>
+                                        <connections>
+                                            <action selector="touchUpInsideCompleteButton:" destination="DPn-2P-vHz" eventType="touchUpInside" id="teH-lY-AkF"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1jt-uS-m96">
                                         <rect key="frame" x="20" y="7.5" width="80" height="30"/>
@@ -133,6 +136,9 @@
                                             <constraint firstAttribute="width" constant="80" id="Hzh-kU-Ddi"/>
                                         </constraints>
                                         <state key="normal" title="取り消し"/>
+                                        <connections>
+                                            <action selector="touchUpInsideCancelButton:" destination="DPn-2P-vHz" eventType="touchUpInside" id="FZb-Kl-vZH"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.97256201509999995" green="0.972525537" blue="0.9725503325" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
